02-developers/02-tenants/superhero-battle/overlays/cicd/triggers/trigger-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventLister: build-listener
  name: build-listener-route
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-superhero-builds
    weight: 100
